--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title Tic Tac Toe
+    link(rel='stylesheet' href='/main.css')
   body
     h1 tic tac toe
     script(src='/main.js')
