--- a/views/index.pug
+++ b/views/index.pug
@@ -5,4 +5,5 @@ html
     link(rel='stylesheet' href='/main.css')
   body
     h1 tic tac toe
+    script(src='/socket.io/socket.io.js')
     script(src='/main.js')
