--- a/views/home.pug
+++ b/views/home.pug
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet' href='/main.css')
   body
     h1 tic tac toe
-    h2 Select a game
-    ul
-      for game in games
-        li: a(href=`/game/${game._id}`) Game: #{game._id}
+    .create
+      a(href='/game/create') Start New Game
+    .join
+      a(href='/game') Join a game
